--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -8,7 +8,7 @@ body {
   justify-content: start; /* Aligns content to start but allows for offset */
   height: 100%;
   overflow: auto;
-  
+
   scroll-behavior: smooth;
 }
 
@@ -298,7 +298,6 @@ body {
 .heading {
   opacity: 1;
   font-size: 18px;
-  padding-bottom: 5px;
   padding-top: 25px;
   padding-left: 15px;
   padding-right: 15px;
@@ -307,13 +306,12 @@ body {
   z-index: -1;
   color: white;
   letter-spacing: 1px;
-  text-decoration: underline;
   text-underline-offset: 5.5px;
-  text-decoration-thickness: 1px;
   opacity: 0;
   transform: translateY(20px);
   transition: opacity 0.6s ease-out, transform 0.6s ease-out,
     background-color 0.3s ease;
+  font-weight: 500;
 }
 
 .heading.visible {
@@ -364,6 +362,18 @@ li {
   transition: width 0.2s, height 0.2s, box-shadow 0.2s, border-radius 0.2s,
     background-color 0.2s;
   z-index: 1;
+}
+
+.summary {
+  padding: 10px;
+  line-height: 1.6;
+  margin-bottom: 35px;
+  z-index: -1;
+  font-weight: 000;
+  text-align: left;
+  letter-spacing: 2px;
+  max-width: 60%;
+  line-height: 2;
 }
 
 .contentstyle p {
@@ -436,7 +446,7 @@ li {
 
 .box:hover {
   cursor: pointer;
-  background-color: #0962ba;
+  background-color: #13365a;
 }
 
 #button {
@@ -567,11 +577,10 @@ footer {
     z-index: 2;
     padding: 10px;
     position: fixed;
-    background-color: rgba(255, 255, 255, 0.23);
+    background-color: rgb(12 21 51 / 84%);
     backdrop-filter: blur(10px) saturate(100%);
-    -webkit-backdrop-filter: blur(10px) saturate(100%);
-    border-radius: 50px;
-    margin-bottom: 10px;
+    -webkit-backdrop-filter: blur(30px) saturate(100%);
+    border-radius: 20px;
     -webkit-tap-highlight-color: transparent;
   }
 
@@ -585,7 +594,7 @@ footer {
   }
 
   #navn1 img {
-    width: 40px;
+    width: 25px;
     filter: invert(1);
     -webkit-tap-highlight-color: transparent;
     transition: transform 0.3s ease;
@@ -628,11 +637,10 @@ footer {
     padding-bottom: 70px;
     padding-left: 25px;
   }
-  
+
   .contentstyle {
     max-width: 100%;
   }
-  
 }
 
 @media (max-width: 637px) {
@@ -652,6 +660,10 @@ footer {
     height: 100%;
     overflow: auto;
     scroll-behavior: smooth;
+  }
+
+  .summary {
+    max-width: 100%;
   }
 
   .cursor-glow {
@@ -705,7 +717,7 @@ footer {
   }
 
   #navn1 img {
-    width: 32px;
+    width: 25px;
     filter: invert(1);
     -webkit-tap-highlight-color: transparent;
   }
