--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -423,8 +423,8 @@ li {
   line-height: 1.6;
   margin-bottom: 35px;
   z-index: -1;
-  background-color: rgba(255, 255, 255, 0.141);
-  backdrop-filter: blur(15px) saturate(100%);
+  background-color: rgb(255 255 255 / 5%);
+  backdrop-filter: blur(41px) saturate(100%);
   -webkit-backdrop-filter: blur(15px) saturate(100%);
   border-radius: 10px;
   opacity: 0;
