--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -692,6 +692,7 @@ footer {
   .summary {
     max-width: 100%;
     font-size: 14px;
+    padding-top: 0px;
   }
 
   #title {
@@ -839,6 +840,7 @@ footer {
 
   .right-side-content {
     padding: 10px;
+    padding-top: 0;
   }
 
   .contentstyle.visible {
