--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -319,7 +319,7 @@ li {
   line-height: 1.6;
   margin-bottom: 35px;
   z-index: -1;
-  background-color: rgb(255 255 255 / 5%);
+  background-color: rgb(255 255 255 / 13%);
   backdrop-filter: blur(41px) saturate(100%);
   -webkit-backdrop-filter: blur(15px) saturate(100%);
   border-radius: 10px;
@@ -499,11 +499,13 @@ footer {
     border-radius: 20px;
     margin-bottom: 15px;
     border: 0.1px solid rgba(255, 255, 255, 0.1);
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out; /* Combine transform and opacity transitions */
+    opacity: 1; /* Default is fully visible */
   }
   
   #navn1.hidden {
-    transform: translate(-50%, 100%); /* moves navbar below the viewport */
+    transform: translate(-50%, 100%); /* Moves navbar below the viewport */
+    opacity: 0; /* Makes the navbar fully transparent */
   }
   
   
