--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -1,7 +1,7 @@
 html {
   overflow: hidden;
   height: 100%;
-  font-family: "Poppins", serif;
+  font-family: "Inter", serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -492,7 +492,7 @@ footer {
     transform: translateX(-50%);
     bottom: 0;
     z-index: 2;
-    padding: 6px;
+    padding: 12px;
     position: fixed;
     background-color: rgba(12, 21, 51, 0.84);
     backdrop-filter: blur(10px) saturate(100%);
