--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -8,7 +8,7 @@ html {
 
 body {
   display: flex;
-  justify-content: start; /* Aligns content to start but allows for offset */
+  justify-content: start;
   height: 100%;
   overflow: auto;
   scroll-behavior: smooth;
@@ -25,7 +25,6 @@ body {
   width: 100vw;
   height: 100vh;
   z-index: -1;
-  /* Places the background behind other content */
   filter: blur(0px);
   background-color: white;
 }
@@ -59,10 +58,7 @@ body {
   color: #e6e6e6;
   font-size: 20px;
   display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  margin: 1em 0;
   white-space: nowrap;
   overflow: hidden;
   margin-left: 8px;
@@ -77,8 +73,7 @@ body {
   -webkit-tap-highlight-color: transparent;
   opacity: 0;
   transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out,
-    background-color 0.3s ease;
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out, background-color 0.3s ease;
   padding: 14px 14px 50px 14px;
 }
 
@@ -107,8 +102,7 @@ body {
   margin-top: 0px;
   opacity: 0;
   transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out,
-    background-color 0.3s ease;
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out, background-color 0.3s ease;
 }
 
 .content.visible {
@@ -145,10 +139,7 @@ body {
   color: #e6e6e6;
   font-size: 20px;
   display: block;
-  margin-block-start: 0.5em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  margin: 0.5em 0 1em 0;
   white-space: nowrap;
   overflow: hidden;
 }
@@ -159,18 +150,14 @@ body {
 
 .left-half nav a {
   display: block;
-  margin: 10px 0px 25px 0px;
+  margin: 20px 0 8px 0;
   color: #fff;
   text-decoration: none;
   font-weight: bold;
   text-align: left;
-  padding-top: 15px;
-  padding-right: 15px;
-  padding-top: 15px;
-  padding-bottom: 10px;
+  padding: 15px 15px 10px 30px;
   width: 30%;
-  padding-left: 30px;
-  letter-spacing: 0.1rem;
+  letter-spacing: 1.5px;
   background: linear-gradient(to right, rgb(113 229 229 / 0%), #2563eb69),
     linear-gradient(to right, rgb(239 0 0 / 0%), #0051ff, rgb(255 255 255));
   background-size: 100% 1px, 0 3px;
@@ -212,12 +199,9 @@ body {
 }
 
 .heading {
-  opacity: 1;
   font-size: 22px;
-  padding-top: 25px;
-  padding-left: 15px;
-  padding-right: 15px;
-  font-weight: 00;
+  padding: 25px 15px 0;
+  font-weight: 700;
   text-align: left;
   z-index: -1;
   color: white;
@@ -225,9 +209,7 @@ body {
   text-underline-offset: 5.5px;
   opacity: 0;
   transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out,
-    background-color 0.3s ease;
-  font-weight: 700;
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out, background-color 0.3s ease;
 }
 
 .heading.visible {
@@ -237,25 +219,21 @@ body {
 
 .header {
   font-size: 18px;
-  padding-top: 20px;
-  padding-right: 15px;
-  padding-left: 15px;
-  font-weight: 00;
+  padding: 20px 15px 0;
+  font-weight: bold;
   text-align: left;
   color: #ffffff;
   letter-spacing: 0.1px;
 }
 
 li {
-  font-weight: 000;
-  padding-top: 1px;
-  padding-right: 15px;
-  padding-bottom: 10px;
+  font-weight: 400;
+  padding: 1px 15px 10px;
   text-align: left;
   color: #ffffff;
-  letter-spacing: 0px;
-  list-style-type: none;
+  letter-spacing: 0.3px;
   list-style-type: circle;
+  font-size: 14px;
 }
 
 .sectiontitle {
@@ -271,14 +249,9 @@ li {
   position: absolute;
   pointer-events: none;
   background-color: transparent;
-  background-image: radial-gradient(
-    circle,
-    rgb(255 255 255 / 5%) 0%,
-    transparent 70%
-  );
+  background-image: radial-gradient(circle, rgb(255 255 255 / 5%) 0%, transparent 70%);
   transform: translate(-50%, -50%);
-  transition: width 0.2s, height 0.2s, box-shadow 0.2s, border-radius 0.2s,
-    background-color 0.2s;
+  transition: width 0.2s, height 0.2s, box-shadow 0.2s, border-radius 0.2s, background-color 0.2s;
   z-index: 1;
 }
 
@@ -294,12 +267,11 @@ li {
   line-height: 2;
   font-weight: 000;
   text-align: left;
-  letter-spacing: 1px;
+  letter-spacing: 0.3px;
   font-size: 14px;
   opacity: 0;
   transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out,
-    background-color 0.3s ease;
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out, background-color 0.3s ease;
 }
 
 .summary.visible {
@@ -308,10 +280,10 @@ li {
 }
 
 .contentstyle p {
-  font-weight: 000;
+  font-weight: 400;
   text-align: left;
-  padding: 5px 19px 0px 20px;
-  letter-spacing: 1px;
+  padding: 5px 19px 0 20px;
+  letter-spacing: 0.3px;
 }
 
 .contentstyle {
@@ -325,8 +297,7 @@ li {
   border-radius: 10px;
   opacity: 0;
   transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out,
-    background-color 0.3s ease;
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out, background-color 0.3s ease;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
   max-width: 55%;
   border: 0.1px solid rgba(255, 255, 255, 0.3);
@@ -339,9 +310,26 @@ li {
 }
 
 .contentstyle:hover {
-  background-color: rgba(255, 255, 255, 0.151);
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
-  transform: translateY(0) scale(1);
+  background-color: rgba(255, 255, 255, 0.2);
+  transform: translateY(-5px);
+}
+
+.arrow-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 18px;
+  color: #ffffff;
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.contentstyle:hover .arrow-icon {
+  transform: scale(1.3);
+}
+
+p {
+  font-size: 14px;
+  color: #ffffff;
 }
 
 .responsivegrid {
@@ -364,10 +352,6 @@ li {
   justify-content: center;
   flex-direction: row;
   padding: 20px;
-}
-
-.fa {
-  margin-top: 5px;
 }
 
 .box {
@@ -401,28 +385,6 @@ footer {
   padding-bottom: 50px;
 }
 
-.left-half nav a {
-  display: block;
-  margin: 20px 0px 8px 0px;
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  text-align: left;
-  padding-top: 15px;
-  padding-right: 15px;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  width: 30%;
-  padding-left: 30px;
-  letter-spacing: 0.1rem;
-  background: linear-gradient(to right, rgb(113 229 229 / 0%), #2563eb69),
-    linear-gradient(to right, rgb(239 0 0 / 0%), #0051ff, rgb(255 255 255));
-  background-size: 100% 1px, 0 3px;
-  background-position: 100% 100%, 0 100%;
-  background-repeat: no-repeat;
-  transition: background-size 400ms, opacity 0.5s ease, padding-left 0.3s ease;
-}
-
 @media screen and (min-device-width: 900px) and (max-device-width: 2500px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
   .contentstyle {
     max-width: 70%;
@@ -434,7 +396,7 @@ footer {
   }
 
   .left-half nav a {
-    margin: 10px 0px 8px 0px;
+    margin: 10px 0 8px 0;
   }
 
   .left-half {
@@ -449,7 +411,6 @@ footer {
 
 @media (max-width: 1000px) {
   .cursor-glow {
-    /* Disable or override properties that create the glow effect */
     box-shadow: none;
     border: none;
   }
@@ -476,10 +437,7 @@ footer {
     width: 100%;
     text-align: center;
     overflow: hidden;
-    padding-top: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-bottom: 0px;
+    padding: 0;
     background: none;
     margin-left: 0px;
   }
@@ -499,13 +457,13 @@ footer {
     border-radius: 20px;
     margin-bottom: 15px;
     border: 0.1px solid rgba(255, 255, 255, 0.1);
-    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out; /* Combine transform and opacity transitions */
-    opacity: 1; /* Default is fully visible */
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+    opacity: 1;
   }
 
   #navn1.hidden {
-    transform: translate(-50%, 100%); /* Moves navbar below the viewport */
-    opacity: 0; /* Makes the navbar fully transparent */
+    transform: translate(-50%, 100%);
+    opacity: 0;
   }
 
   #navn1 a {
@@ -539,10 +497,6 @@ footer {
 
   .left-half nav {
     display: none;
-  }
-
-  .left-half nav a {
-    background: none;
   }
 
   .right-half {
@@ -653,10 +607,7 @@ footer {
     width: 100%;
     text-align: center;
     overflow: hidden;
-    padding-top: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-bottom: 0px;
+    padding: 0;
     background: none;
   }
 
@@ -711,8 +662,8 @@ footer {
   }
 
   .contentstyle {
-    max-width: 88%; /* Adjust the width as desired */
-    margin: 0 auto; /* Centers the element */
+    max-width: 88%;
+    margin: 0 auto;
     margin-bottom: 35px;
   }
 
