--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -408,7 +408,10 @@ footer {
   }
 }
 
-@media (max-width: 900px) {
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
   .cursor-glow {
     box-shadow: none;
     border: none;
