--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -149,6 +149,11 @@ body {
   display: none;
 }
 
+.left-half nav {
+
+  padding-top: 30px;
+}
+
 .left-half nav a {
   display: block;
   margin: 20px 0 8px 0;
@@ -401,7 +406,7 @@ and (orientation: landscape) and (max-device-width: 2500px) and (-webkit-min-dev
   }
 
   .content {
-    margin-left: 15%;
+    margin-left: 20%;
     padding: 60px 30px 30px 0px;
 }
   .summary {
